--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tests/input/origins-docker"]
 	path = tests/input/origins-docker
-	url = git://github.com/cbmi/origins-docker.git
+	url = git://github.com/chop-dbhi/origins-docker.git
