--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,11 @@ before_install:
     - flake8
 
 install:
-    - bash tests/start-neo4j.sh
-    - pip install -r tests/requirements.txt
+    - pip install -q -r tests/requirements.txt
+    - pip install -q coverage
 
 before_script:
+    - bash tests/start-neo4j.sh
     - mysql -u $MYSQL_USER < tests/input/chinook_mysql.sql > /dev/null
     - psql -U $POSTGRESQL_USER -c 'create database chinook' > /dev/null
     - psql -U $POSTGRESQL_USER -d chinook < tests/input/chinook_postgresql.sql > /dev/null
