Install package for install requirements
Signed-off-by: Byron Ruth <b@devel.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ before_install:
     - flake8
 
 install:
+    # Install package, test requirements, and coverage for testing
+    - pip install -q -e .
     - pip install -q -r tests/requirements.txt
     - pip install -q coverage
 
