Rename Origins-related things
Signed-off-by: Byron Ruth <b@devel.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_install:
 install:
     # Install package, test requirements, and coverage for testing
     - pip install -q -e .
+    - pip install -q -r requirements.txt
     - pip install -q -r tests/requirements.txt
     - pip install -q coverage
 
