--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 SQLAlchemy==0.9.8
 PyMySQL==0.6.3
 PyVCF==0.6.7
-SQLAlchemy==0.9.8
 openpyxl==2.1.4
 psycopg2==2.5.4
 pymongo==2.7.2
+jsonschema==2.5.1
+python-dateutil==2.4.2
